refactor-10 (#87)